# Your-Story-Generator-AI

./: .gitignore  DEPLOYMENT.md  README.md  requirements.txt  vercel.json
Backend/: .env.example  README.md  alembic.ini  check_db.py  fix_alembic.py  main.py  pyproject.toml  requirements.txt
Backend/ai/: __init__.py  edge_tts_service.py  mms_tts.py
Backend/alembic/: env.py
Backend/alembic/versions/: 001_initial_migration.py  002_add_language.py  003_add_users.py  004_add_story_branches.py  005_add_current_node_id.py  006_add_story_context.py  007_add_indexes.py  008_fix_users_schema.py
Backend/core/: __init__.py  auth.py  config.py  exceptions.py  logging.py  prompts.py  security.py  story_generator.py  tts.py
Backend/db/: database.py
Backend/models/: __init__.py  job.py  story.py  user.py
Backend/routers/: __init__.py  auth.py  jobs.py  story.py  tts.py
Backend/schema/: __init__.py  job.py  story.py  user.py
Backend/tests/: conftest.py  test_health.py  test_stories.py
Frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.tsx
Frontend/src/api/: auth.ts  client.ts  index.ts  jobs.ts  stories.ts
Frontend/src/components/auth/: ProtectedRoute.tsx
Frontend/src/components/layout/: Layout.tsx  Navbar.tsx
Frontend/src/components/story/: AtmosphereSelector.tsx  AudioPlayer.tsx  ChoiceButtons.tsx  GeneratingOverlay.tsx  GenreSelector.tsx  LanguageSelector.tsx  NarratorSelector.tsx  StoryCard.tsx  StoryContent.tsx  index.ts
Frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  LoadingSpinner.tsx  TextArea.tsx  index.ts
Frontend/src/pages/: CreateStoryPage.tsx  HomePage.tsx  LandingPage.tsx  LibraryPage.tsx  LoginPage.tsx  SignupPage.tsx  StoryPage.tsx  StoryReadPage.tsx  StoryTreePage.tsx  index.ts
Frontend/src/stores/: authStore.ts  index.ts  storyStore.ts
Frontend/src/styles/: globals.css
Frontend/src/types/: index.ts
api/: index.py  requirements.txt
